--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <header>Zahl raten Spiel</header>
     <div class="container">
         <h1 id="headline">Rate die Zahl!</h1>
+        <p>0 bis 100</p>
+        <h2 id="displayWins">Gewinne: 0</h2>
         <h2 id="displayAttempts">Versuche: 0</h2>
         <form onsubmit="guessTheNumber(); return false;">
-            <input id="myNumber" type="number" required placeholder="Bitte Zahl eingeben...">
-            <button>Raten!</button>
+            <input id="myNumber" type="number" min="0" max="100" required placeholder="Bitte Zahl eingeben...">
+            <button id="guessButton">Raten!</button>
         </form>
         <button id="resetButton" style="display: none;">Neustarten</button>
+        <button id="rewardButton" style="display: none;">Claim Reward</button>
+        <img id="rewardImg" src="./rob-griffin-CnxlUdOKGbY-unsplash.jpg" style="display: none;" alt="Jumspcare">
     </div>
+
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </body>
-</html>
+</html> 
