--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 id="headline">Rate die Zahl!</h1>
         <p>0 bis 100</p>
-        <h2 id="displayWins">Gewinne: 0</h2>
+        <h2 id="displayWins">Wins: 0/3</h2>
         <h2 id="displayAttempts">Versuche: 0</h2>
         <form onsubmit="guessTheNumber(); return false;">
             <input id="myNumber" type="number" min="0" max="100" required placeholder="Bitte Zahl eingeben...">
@@ -19,7 +19,7 @@
         </form>
         <button id="resetButton" style="display: none;">Neustarten</button>
         <button id="rewardButton" style="display: none;">Claim Reward</button>
-        <img id="rewardImg" src="./rob-griffin-CnxlUdOKGbY-unsplash.jpg" style="display: none;" alt="Jumspcare">
+        <img id="rewardImg" src="./images/rob-griffin-CnxlUdOKGbY-unsplash.jpg" style="display: none;" alt="Jumspcare">
     </div>
 
     <script src="index.js"></script>
