--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2 id="displayWins">Wins: 0/3</h2>
         <h2 id="displayAttempts">Versuche: 0</h2>
         <form onsubmit="guessTheNumber(); return false;">
-            <input id="myNumber" type="number" min="0" max="100" required placeholder="Bitte Zahl eingeben...">
+            <input id="myNumber" type="number" min="0" max="100" required placeholder="eingeben">
             <button id="guessButton">Raten!</button>
         </form>
         <button id="resetButton" style="display: none;">Neustarten</button>
